--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -16,10 +16,17 @@
             &-track {
                 display: flex;
                 transition: 1.5s;
-                color: rgba(0, 0, 0, 0.34);
 
-                &__item {
-                    background-image: rgba(0, 0, 0, 0.34);
+                &__item::after {
+                    content: '';
+                    background: rgba(0, 0, 0, 0.34);
+                    display: block;
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    z-index: 1;
                 }
             }
 
@@ -27,7 +34,7 @@
                 position: absolute;
                 margin-left: 165px;
                 margin-top: 235px;
-                z-index: 1;
+                z-index: 2;
                 border: none;
                 background: none;
             }
@@ -36,7 +43,7 @@
                 position: absolute;
                 margin-left: 92em;
                 margin-top: 235px;
-                z-index: 1;
+                z-index: 2;
                 border: none;
                 background: none;
             }
@@ -53,6 +60,7 @@
             font-size: 28px;
             border: 1px solid #EBF1FD;
             cursor: pointer;
+            z-index: 2;
 
             &>a {
                 color: #FFFFFF;
@@ -69,6 +77,7 @@
         height: 136px;
         top: 62px;
         border-left: 2px solid #FFFFFF;
+        z-index: 2;
 
         &__name {
             display: flex;
