--- a/src/scss/blocks/_tab.scss
+++ b/src/scss/blocks/_tab.scss
@@ -38,6 +38,8 @@
         margin-right: 0;
         background: rgba(191, 219, 247, 0.2);
 
+        
+
         &__img {
             width: 100%;
             height: 538px;
@@ -102,7 +104,7 @@
         }
     }
 
-    &-slides--active {
+    &-slide:target {
         display: flex;
     }
 
