--- a/src/scss/blocks/_first.scss
+++ b/src/scss/blocks/_first.scss
@@ -85,3 +85,41 @@
         }
     }
 }
+
+@media only screen and (min-width: 375px) {
+    .first-block {
+        &__list {
+            flex-direction: column;
+
+            &-item {
+                margin-bottom: 10px;
+            }
+        }
+
+        &__present {
+            width: 350px;
+
+            &-name {
+                width: 100%;
+                justify-content: space-evenly;
+
+                &__title {
+                    font-size: 20px;
+                }
+            }
+
+            &-lines {
+                width: 100%;
+            }
+
+            &-text {
+                width: 100%;
+            }
+
+            &-video {
+                width: 100%;
+                height: 244px;
+            }
+        }
+    }
+}
