--- a/src/scss/blocks/_fourth.scss
+++ b/src/scss/blocks/_fourth.scss
@@ -296,3 +296,54 @@
         }
     }
 }
+
+@media only screen and (min-width: 375px) {
+    .fourth-block {
+        width: 100%;
+        &__tabs {
+            width: 100%;
+            max-width: 350px;
+            margin: auto;
+
+            &-items {
+                &__item {
+                    font-size: 13px;
+                }
+            }
+
+            &-body {
+                margin-top: 50px;
+
+                &__img-one {
+                    width: 100%;
+                }
+
+                &__img-two {
+                    width: 100%;
+                }
+
+                &__img-three {
+                    width: 100%;
+                }
+
+                &__img-four {
+                    width: 100%;
+                }
+
+                &__block {
+                    margin: auto;
+                    width: 100%;
+                    height: unset;
+                    flex-direction: column;
+                }
+
+                &__block:target {
+                    &>p {
+                        width: 100%;
+                        margin-left: 0;
+                    }
+                }
+            }
+        }
+    }
+}
