--- a/src/scss/blocks/_seventh.scss
+++ b/src/scss/blocks/_seventh.scss
@@ -270,3 +270,28 @@
         }
     }
 }
+
+@media only screen and (min-width: 375px) {
+    .seventh-block {
+        &__lines {
+            width: 100%;
+        }
+
+        &__restourant {
+            flex-direction: column;
+
+            &-img {
+                width: 100%;
+
+                &-item {
+                    width: 100%;
+                }
+            }
+
+            &-text {
+                width: 100%;
+                margin-left: unset;
+            }
+        }
+    }
+}
