--- a/src/scss/blocks/_sixth.scss
+++ b/src/scss/blocks/_sixth.scss
@@ -74,3 +74,16 @@
         }
     }
 }
+
+@media only screen and (min-width: 375px) {
+    .sixth-block {
+        height: unset;
+        &__lines {
+            width: 100%;
+        }
+
+        &__cards {
+            flex-direction: column;
+        }
+    }
+}
