--- a/src/scss/blocks/_third.scss
+++ b/src/scss/blocks/_third.scss
@@ -47,3 +47,17 @@
         }
     }
 }
+
+@media only screen and (min-width: 375px) {
+    .third-block {
+        flex-direction: column;
+
+        &__img {
+            width: 100%;
+        }
+
+        &__content {
+            width: 100%;
+        }
+    }
+}
