--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -48,3 +48,10 @@ a {
     padding-left: 166px;
     padding-right: 166px;
 }
+
+@media only screen and (min-width: 375px) {
+    .container {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+}
