--- a/src/scss/blocks/_fifth.scss
+++ b/src/scss/blocks/_fifth.scss
@@ -105,7 +105,7 @@
     } 
 }
 
-@media only screen and (min-width: 375px) {
+@media (min-width: 375px) {
     .fifth-block {
         width: 100%;
 
@@ -134,5 +134,143 @@
                 width: 100%;
             }
         }
+    }
+}
+
+@media (min-width: 768px) {
+    .fifth-block {
+        width: 700px;
+
+        &__first {
+            &-img {
+                margin: auto;
+            }
+
+            &-box {
+                height: 34vh;
+            }
+        }
+
+        &__second {
+            &-box {
+                margin: auto;
+                height: 34vh;
+            }
+
+            &-img {
+                margin: 50px auto;
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .fifth-block {
+        margin: 140px auto auto;
+        width: 100%;
+    
+        &__title {
+            font-family: $ff;
+            font-size: 48px;
+            line-height: 130%;
+            text-align: center;
+            letter-spacing: $lc;
+            color: $rgba-c;
+        }
+    
+        &__lines {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 5px auto;
+            width: 412px;
+    
+            &>hr:first-child {
+                width: 100%;
+                height: 0;
+                border: 1px solid $main-color;
+            }
+    
+            &>hr {
+                margin-top: 10px;
+                width: 220px;
+                border: 1px solid $main-color;
+            }
+        }
+    
+        &__first {
+            margin-top: 35px;
+            width: 100%;
+            display: flex;
+            flex-wrap: unset;
+    
+            &-img {
+                margin: unset;
+                width: 540px;
+                height: 690px;
+                background: url(/img/third1.jpg) center no-repeat;
+            }
+    
+            &-box {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                margin-top: 130px;
+                margin-left: 70px;
+                height: 485px;          
+            }
+    
+            &-text {
+                font-size: 16px;
+                line-height: 150%;
+                text-align: center;
+                letter-spacing: $lc;
+                color: #000000;
+            }
+    
+            &-vectors {
+                display: flex;
+                width: 467px;
+                align-items: center;
+                justify-content: space-between;        
+            }
+        }
+        
+        &__second {
+            margin-top: 140px;
+            width: 100%;
+            display: flex;
+            flex-wrap: unset;
+    
+            &-box {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                margin-top: 54px;
+                margin-right: 65px;
+                height: 485px;          
+            }
+    
+            &-text {
+                font-size: 16px;
+                line-height: 150%;
+                text-align: center;
+                letter-spacing: $lc;
+                color: #000000;
+            }
+    
+            &-vectors {
+                display: flex;
+                width: 467px;
+                align-items: center;
+                justify-content: space-between;        
+            }
+    
+            &-img {
+                width: 540px;
+                height: 540px;
+                background: url(/img/third2.jpg) center no-repeat;
+            }
+        } 
     }
 }
