--- a/src/scss/blocks/_hotel.scss
+++ b/src/scss/blocks/_hotel.scss
@@ -155,3 +155,66 @@
         }
     }
 }
+
+@media (min-width: 375px) {
+    .hotel {
+        &-lines {
+            width: 100%;
+        }
+
+        &-bg {
+            &>img {
+                width: 100%;
+            }
+        }
+
+        &-block {
+            flex-direction: column;
+
+            &__img {
+                width: 100%;
+                height: 330px;
+
+                &-item {
+                    width: 50vh;
+                    height: 44vh;
+                }
+
+                &>div {
+                    width: 340vh;
+                }
+            }
+
+            &__text {
+                width: 100%;
+                margin-top: 0;
+            }
+        }
+
+        &-gift {
+            &__vectors {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .hotel {
+        margin: 45vh auto auto;
+        width: 700px;
+
+        &-block {
+            &__img {
+                &-item {
+                    width: 100vh;
+                    height: unset;
+                }
+            }
+
+            &__text {
+                margin-top: 40vh;
+            }
+        }
+    }
+}
