--- a/src/scss/blocks/_sixth.scss
+++ b/src/scss/blocks/_sixth.scss
@@ -75,7 +75,7 @@
     }
 }
 
-@media only screen and (min-width: 375px) {
+@media (min-width: 375px) {
     .sixth-block {
         height: unset;
         &__lines {
@@ -84,6 +84,99 @@
 
         &__cards {
             flex-direction: column;
+        }
+    }
+}
+
+@media (min-width: 768px) {
+    .sixth-block {
+        width: 700px;
+
+        &__cards {
+            &-item {
+                margin-top: 20px;
+            }
+        }
+    }
+}
+
+@media (min-width: 1024px) {
+    .sixth-block {
+        margin: 140px auto auto;
+        width: 100%;
+        height: 1022px;
+    
+        &__title {
+            font-family: $ff;
+            font-size: 48px;
+            line-height: 130%;
+            text-align: center;
+            letter-spacing: $lc;
+            color: $rgba-c;
+        }
+    
+        &__lines {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 5px auto;
+            width: 412px;
+    
+            &>hr:first-child {
+                width: 100%;
+                height: 0;
+                border: 1px solid $main-color;
+            }
+    
+            &>hr {
+                margin-top: 10px;
+                width: 220px;
+                border: 1px solid $main-color;
+            }
+        }
+    
+        &__text {
+            margin-top: 30px;
+            font-size: 16px;
+            line-height: 150%;
+            text-align: center;
+            letter-spacing: $lc;
+            text-indent: 20px;
+            color: $rgba-c;
+        }
+    
+        &__cards {
+            margin-top: 50px;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-direction: row;
+    
+            &-item {
+                width: 290px;
+                height: 654px;
+    
+                &__text {
+                    margin-top: 40px;
+                    font-size: 16px;
+                    line-height: 150%;
+                    text-align: center;
+                    letter-spacing: $lc;
+                    color: $rgba-c;
+    
+                    &>span {
+                        color: #000000;
+                    }
+                }
+            }
+    
+            &-img {
+                &>img {
+                    background: center no-repeat;
+                    width: 100%;
+                }
+            }
         }
     }
 }
