--- a/src/scss/blocks/_third.scss
+++ b/src/scss/blocks/_third.scss
@@ -48,7 +48,7 @@
     }
 }
 
-@media only screen and (min-width: 375px) {
+@media (min-width: 375px) {
     .third-block {
         flex-direction: column;
 
@@ -60,4 +60,58 @@
             width: 100%;
         }
     }
+}
+
+@media (min-width: 1024px) {
+    .third-block {
+        margin-top: 140px;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        width: 100%;
+    
+        &__img {
+            width: 540px;
+            height: 540px;
+    
+            &-item {
+                width: 100%;
+                height: 100%;
+                background: url('../../../img/second2.png') center no-repeat ;
+            }
+        }
+    
+        &__content {
+            position: relative;
+            display: flex;
+            flex-direction: column;
+            width: 540px;
+    
+            &-title {
+                font-family: $ff;
+                font-size: 48px;
+                line-height: 130%;
+                text-align: center;
+                letter-spacing: $lc;
+                color: $rgba-c;
+            }
+    
+            &-text {
+                margin-top: 20px;
+                font-size: 16px;
+                line-height: 150%;
+                text-align: center;
+                letter-spacing: $lc;
+                text-indent: 20px;
+                color: $rgba-c;
+            }
+    
+            &>svg {
+                position: absolute;
+                bottom: 0;
+                right: 0;
+            }
+        }
+    }
+    
 }
