--- a/src/scss/blocks/_wedding.scss
+++ b/src/scss/blocks/_wedding.scss
@@ -33,3 +33,20 @@
         color: rgba(0, 0, 0, 0.7);
     }
 }
+
+@media (min-width: 375px) {
+    .wedding {
+        width: 100%;
+
+        &-img {
+            width: 100%;
+            &>img {
+                width: 100%;
+            }
+        }
+
+        &-line {
+            width: 100%;
+        }
+    }
+}
