--- a/src/scss/blocks/_fifth.scss
+++ b/src/scss/blocks/_fifth.scss
@@ -240,15 +240,16 @@
             margin-top: 140px;
             width: 100%;
             display: flex;
+            align-items: center;
             flex-wrap: unset;
     
             &-box {
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
-                margin-top: 54px;
+                margin: auto;
                 margin-right: 65px;
-                height: 485px;          
+                height: 34vh;          
             }
     
             &-text {
@@ -272,5 +273,23 @@
                 background: url(/img/third2.jpg) center no-repeat;
             }
         } 
+    }
+}
+
+@media (min-width: 1440px) {
+    .fifth-block {
+        &__first {
+            &-box {
+                width: 505px;
+            }
+        }
+
+        &__second {
+            &-box {
+                align-items: center;
+                width: 53vh;
+                height: 485px;
+            }
+        }
     }
 }
