--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -109,3 +109,20 @@
         }
     }
 }
+
+@media (min-width: 1440px) {
+    .footer {
+        height: 477px;
+        
+        &-block {
+            flex-direction: row;
+
+            &__map {
+                margin-top: 25.52px;
+                margin-left: 166px;
+                width: 718px;
+                height: 427px;
+            }
+        }
+    }
+}
