--- a/src/scss/blocks/_tab.scss
+++ b/src/scss/blocks/_tab.scss
@@ -292,7 +292,7 @@
         &-slide {
             position: relative;
             display: none;
-            width: 1260px;
+            width: 100%;
             margin-top: 40px;
             margin-right: 0;
             background: rgba(191, 219, 247, 0.2);
@@ -309,6 +309,7 @@
                 display: flex;
                 width: 100%;
                 justify-content: space-between;
+                flex-direction: row;
                 inset: 0;
                 opacity: 0;
                 transition: 0.7s;
@@ -358,7 +359,7 @@
                     left: 0;
                 }
                 &.next {
-                    right: 6em;
+                    right: 19em;
                 }
             }
         }
@@ -372,7 +373,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            width: 1110px;
+            width: 800px;
     
             &-items {
                 display: flex;
@@ -451,6 +452,34 @@
     
             }
     
+        }
+    }
+}
+
+@media (min-width: 1440px) {
+    .tab-block {
+        width: 100%;
+
+        &__tabs {
+            width: 100%;
+
+            &-items {
+                &__item {
+                    font-size: 24px;
+                }
+            }
+        }
+
+        &-slide:target {
+            width: 1258px;
+        }
+
+        &-slide {
+            &__btn {
+                &.next {
+                    right: 9em;
+                }
+            }
         }
     }
 }
