--- a/src/scss/blocks/_fourth.scss
+++ b/src/scss/blocks/_fourth.scss
@@ -328,6 +328,10 @@
                             height: unset;
                         }
                     }
+
+                    &-btn {
+                        margin-top: 60%;
+                    }
                 }
 
                 &__img-two {
