--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -8,14 +8,34 @@
         height: 100%;
 
         &__img {
-            position: relative;
             width: 100%;
-            height: 100%;
-            overflow: hidden;
+            
 
             &-track {
-                display: flex;
-                transition: 1.5s;
+                width: 100%;
+
+                &__item {
+                    width: 100%;
+                    position: absolute;
+                    inset: 0;
+                    opacity: 0;
+                    transition: 0.9s;
+    
+                    &>img {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        object-position: center;
+                    }
+                }
+    
+                &__item[data-active] {
+                    width: 100%;
+                    opacity: 1;
+                    z-index: 1;
+                    transition-delay: 0ms;
+                }
 
                 &__item::after {
                     content: '';
@@ -26,26 +46,25 @@
                     height: 100%;
                     top: 0;
                     left: 0;
-                    z-index: 1;
+                    z-index: 1;            
                 }
             }
 
-            &-prev {
+            &-btn {
                 position: absolute;
-                margin-left: 165px;
-                margin-top: 235px;
                 z-index: 2;
-                border: none;
                 background: none;
-            }
+                border: none;
+                top: 50%;
+                transform: translateY(-50%);
+                cursor: pointer;
 
-            &-next {
-                position: absolute;
-                margin-left: 92em;
-                margin-top: 235px;
-                z-index: 2;
-                border: none;
-                background: none;
+                &.prev {
+                    left: 10px;
+                }
+                &.next {
+                    right: 10px;
+                }
             }
         }
 
@@ -139,61 +158,8 @@
 
 @media (min-width: 1024px) {
     .header {
-        // width: 100%;
-        // height: 518px;
-    
         &-main {
             position: relative;
-            // width: 100%;
-            // height: 100%;
-    
-            &__img {
-                position: relative;
-                // width: 100%;
-                // height: 100%;
-                overflow: hidden;
-    
-                &-track {
-                    display: flex;
-                    transition: 1.5s;
-    
-                    &__item {
-                        width: 100%;
-                        height: 100%;
-                        position: relative;
-
-                        &>img::after {
-                            content: '';
-                            background: rgba(0, 0, 0, 0.35);
-                            display: block;
-                            position: absolute;
-                            width: 100%;
-                            height: 100%;
-                            top: 0;
-                            left: 0;
-                            z-index: 1;
-                        }
-                    }
-                }
-    
-                &-prev {
-                    position: absolute;
-                    margin-left: 165px;
-                    margin-top: 235px;
-                    z-index: 2;
-                    border: none;
-                    background: none;
-                }
-    
-                &-next {
-                    position: absolute;
-                    margin-left: 62em;
-                    margin-top: 235px;
-                    z-index: 2;
-                    border: none;
-                    background: none;
-                }
-            }
     
             &__btn {
                 position: absolute;
