--- a/src/scss/blocks/_fourth.scss
+++ b/src/scss/blocks/_fourth.scss
@@ -75,10 +75,12 @@
                 width: 1260px;
                 height: 690px;
                 background: rgba(191, 219, 247, 0.2);
+                transition: 0.7s;
             }
 
             &__block:target {
                 display: flex;
+                transition: 0.7s;
 
                 &>p {
                     margin-top: 135px;
@@ -540,7 +542,7 @@
                         z-index: 2;
                         background: none;
                         border: none;
-                        top: 50%;
+                        top: 3%;
                         transform: translateY(-50%);
                         cursor: pointer;
     
